--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "## Exercise 7\n",
     "\n",
-    "$\\lambda \\approx 0.023848$ is the optimum.\n",
+    "$\\lambda \\approx 0.023848$ is the optimum. It gives a test loss (non-regularized) of $\\sim 2.44017$.\n",
     "\n",
     "![fig1](fig1.svg)"
    ]
@@ -165,7 +165,9 @@
     " -3.68423279e-02 -3.58124856e-02 -3.58124856e-02 -3.58124856e-02\n",
     "  1.56757947e-01\n",
     "]\n",
-    "```"
+    "```\n",
+    "\n",
+    "It gives a test square loss (non-regularized) of 6.10328."
    ]
   },
   {
@@ -222,7 +224,9 @@
     "  &= 2 \\left( (\\theta^T x_i - y_i) x_i + \\lambda \\theta \\right).\n",
     "\\end{align}\n",
     "\n",
-    "Now, to update $\\theta$ using SGD, at each step, first pick\n",
+    "Now, to update $\\theta$ using SGD, do the following at each step.\n",
+    "\n",
+    "First pick\n",
     "\n",
     "$$\n",
     "i \\sim \\text{Uniform}(\\{ 1, \\dots, m \\}).\n",
@@ -232,7 +236,134 @@
     "\n",
     "\\begin{align}\n",
     "\\theta &\\leftarrow \\theta - \\eta \\nabla f_i(\\theta) \\\\\n",
+    "  &= \\theta - 2\\eta \\left( (\\theta^T x_i - y_i) x_i + \\lambda \\theta \\right) \\\\\n",
     "  &= (1 - 2 \\eta \\lambda) \\theta - 2 \\eta (\\theta^T x_i - y_i) x_i.\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5\n",
+    "\n",
+    "We again use $\\lambda = 0.023848$. We then find that for fixed step size $\\eta$ in the range from about $0.001$ to $0.004$, SGD outperforms GD (when using 1000 iterations / epochs in either case). Based on a quick check, the optimal value seems to be about $\\eta = 0.002$, giving us a test loss of $2.35$, better than $2.44$ as seen with GD.\n",
+    "\n",
+    "On the other hand, $\\eta_t \\in \\{ 1/t, 1/\\sqrt{t} \\}$ have not been doing well, despite having $t$ start from 300 to avoid a high initial step size.\n",
+    "\n",
+    "\n",
+    "|$\\eta$|Objective|Test loss|\n",
+    "|------|---------|---------|\n",
+    "|0.0005|3.731|2.412|\n",
+    "|0.001|3.755|2.375|\n",
+    "|0.002|3.873|2.350|\n",
+    "|0.003|4.031|2.379|\n",
+    "|$1/t$|4.243|2.796|\n",
+    "|$1/\\sqrt{t}$|1.7e20|1.5e19|\n",
+    "\n",
+    "![fig2-0](fig2-0.svg)\n",
+    "![fig2-1](fig2-1.svg)\n",
+    "![fig2-2](fig2-2.svg)\n",
+    "![fig2-3](fig2-3.svg)\n",
+    "![fig2-4](fig2-4.svg)\n",
+    "![fig2-5](fig2-5.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 6\n",
+    "\n",
+    "$$\n",
+    "\\eta_t = \\frac{\\eta_0}{1 + \\eta_0 \\lambda t}\n",
+    "$$\n",
+    "\n",
+    "Now with $t$ starting from 1.\n",
+    "\n",
+    "|$\\eta_0$|Objective|Test loss|\n",
+    "|--------|---------|---------|\n",
+    "|0.01    |3.7291   |2.4204   |\n",
+    "|0.02    |3.7292   |2.4198   |\n",
+    "|0.03    |3.7292   |2.4196   |\n",
+    "|0.035   |3.7293   |2.4195   |\n",
+    "|0.04    |3.7293   |2.4193   |\n",
+    "|0.045   |10       |3.8      |\n",
+    "|0.05    |1e13     |1e13     |\n",
+    "\n",
+    "Conclusion: $\\eta_0 \\approx 0.04$ seems to be the sweet spot, though it underperforms (in terms of test loss) fixed step-size $\\eta = 0.02$. But it _outperforms_ any fixed $\\eta$ we have tried _in terms of the objective function_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "\n",
+    "We wish to find\n",
+    "\n",
+    "$$\n",
+    "a^* = {\\arg\\min}_a \\mathbb{E} (a-y)^2.\n",
+    "$$\n",
+    "\n",
+    "Now,\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\mathbb{E} (a-y)^2\n",
+    "  &= \\mathbb{E}(a-\\mathbb{E}y+\\mathbb{E}y-y)^2 \\\\\n",
+    "  &= \\mathbb{E}\\left( (a-\\mathbb{E}y)^2 + 2(a-\\mathbb{E}y)(\\mathbb{E}y-y) + (\\mathbb{E}y-y)^2 \\right) \\\\\n",
+    "  &= (a-\\mathbb{E}y)^2 + \\mathbb{E}(\\mathbb{E}y-y)^2 \\\\\n",
+    "  &= (a-\\mathbb{E}y)^2 + \\text{Var}(y).\n",
+    "\\end{align}\n",
+    "\n",
+    "Clearly, this expression is minimized when $a = a^* = \\mathbb{E}y$.\n",
+    "\n",
+    "This also shows that its risk (the Bayes risk) is\n",
+    "\n",
+    "$$\n",
+    "R(a^*) = \\mathbb{E} (a^*-y)^2 = \\text{Var}(y).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2(a)\n",
+    "\n",
+    "We now wish to find\n",
+    "\n",
+    "$$\n",
+    "f^*(x) = {\\arg\\min}_a \\mathbb{E} \\left[ (a-y)^2 \\mid x \\right].\n",
+    "$$\n",
+    "\n",
+    "This is really the same thing as in exercise 1, except that the distribution of $y$ now depends on $x$. But for a given $f(x)$, $x$ is fixed (so not random), and so the above result applies. Thus:\n",
+    "\n",
+    "$$\n",
+    "f^*(x) = \\mathbb{E}(y \\mid x).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2(b)\n",
+    "\n",
+    "For all $f$,\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\mathbb{E} (f^*(x)-y)^2\n",
+    "  &= \\mathbb{E} \\left[ \\mathbb{E}[(f^*(x)-y)^2 \\mid x] \\right] \\\\\n",
+    "  &\\le \\mathbb{E} \\left[ \\mathbb{E}[(f(x)-y)^2 \\mid x] \\right] \\\\\n",
+    "  &= \\mathbb{E} (f(x)-y)^2.\n",
     "\\end{align}"
    ]
   }
